# form_app

./: README.md  a.py  app.py  backup_app.py  forms.db  forms.json  pyproject.toml  test.py
db/: models.py
src/: forms.db  main.py  main.spec
src/data/: 13.csv  15.csv  16.csv  18.csv  19.csv  20.csv  35.csv  36.csv
src/db/: models.py
src/ui/: delete.ui  form_create.ui  main.ui  multichoice_create.ui  update.ui  view.ui
src/ui/form/: create.ui  update.ui  view.ui
src/views/: forms.py  main.py  utils.py
ui/: app.ui  app2.ui  form_create.ui  main.ui
ui/form/: create.ui  insert.ui  view.ui
views/: forms.py  main.py  utils.py
