[project]
name = "form-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "pyside6>=6.9.0",
]

[tool.black]
line-length = 99

[dependency-groups]
dev = [
    "auto-py-to-exe>=2.46.0",
    "pyinstaller>=6.13.0",
    "pyinstaller-hooks-contrib>=2025.3",
]
